maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:3: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var posBaggle : Array[Int]
      ^JediEscaper:3: error: local variables must be initialized
  var posBaggle : Array[Int]
      ^JediEscaper:6: error: missing arguments for method aBiscuit in class JediEscaper;
follow this method with `_' if you want to treat it as a partially applied function
      if (aBiscuit==true){posBaggle=(j,i)}
          ^JediEscaper:6: error: type mismatch;
 found   : (Int, Int)
 required: Array[Int]
      if (aBiscuit==true){posBaggle=(j,i)}
                                    ^