maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
  var posBaggle : Array[Int]
  for (i<- 0 to getMondeHauteur()){
    for (j<- 0 to getMondeLargeur()){
      if (aBiscuit==true){posBaggle=(j,i)}
    }
  }

    // Your code here
}